Menu a tag width fixed on mobile

--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ header {}
     .main-header ul li a {
         text-decoration: none;
         color: #ffffff;
+        width: 100%;
         /* Change text color */
     }
 
